--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -1,13 +1,12 @@
-name: Run Tests
+name: Publish Snapshot to GitHub Packages
 
 on:
   push:
     branches: [ main ]
-  pull_request:
   workflow_dispatch:
 
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,8 +24,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Run tests
-        run: ./gradlew test
+      - name: Ensure SNAPSHOT version
+        run: |
+          ./gradlew setSnapshotVersion
+          echo "Using SNAPSHOT version: $(grep -oP 'version=\K.*' gradle.properties)"
+
+      - name: Build with Gradle
+        run: ./gradlew build test publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
