Refactor CI workflows to streamline linting, testing, and publishing processes with updated steps and improved separation of concerns.

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -24,13 +24,19 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Run ktlint check
+        run: ./gradlew clean ktlintCheck
+
+      - name: Run tests
+        run: ./gradlew test
+
       - name: Ensure SNAPSHOT version
         run: |
           ./gradlew setSnapshotVersion
           echo "Using SNAPSHOT version: $(grep -oP 'version=\K.*' gradle.properties)"
 
-      - name: Build with Gradle
-        run: ./gradlew build test publish
+      - name: Publish to GitHub Packages
+        run: ./gradlew publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
