--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -43,8 +43,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Sign and publish with Gradle
-        run: ./gradlew test publish -PreleaseVersion=$VERSION
+      - name: Run ktlint check
+        run: ./gradlew clean ktlintCheck
+
+      - name: Run tests
+        run: ./gradlew test
+
+      - name: Publish to GitHub Packages
+        run: ./gradlew publish -PreleaseVersion=$VERSION
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
