--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
+          GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_USERNAME: github-actions
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
