Add permissions setup to publish-snapshot workflow for package writing and content reading.

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -1,5 +1,9 @@
 name: Publish Snapshot to GitHub Packages
 
+permissions:
+  packages: write
+  contents: read
+
 on:
   push:
     branches: [ main ]
