Add new `delete-tag` utility in Makefile and refactor workflows for consistency and permissions setup.

--- a/.github/workflows/ktlint-check.yml
+++ b/.github/workflows/ktlint-check.yml
@@ -1,27 +1,29 @@
 name: Ktlint Check
 
+permissions:
+    contents: read
+    packages: write
+    checks: write
+
 on:
-  pull_request:
-  workflow_dispatch:
+    pull_request:
+    workflow_dispatch:
 
 jobs:
-  ktlint-check:
-    runs-on: ubuntu-latest
+    ktlint-check:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-          cache: gradle
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Ktlint Check with Gradle
-        run: ./gradlew clean ktlintCheck
+        steps:
+            -   uses: actions/checkout@v3
+                with:
+                    fetch-depth: 0
+            -   name: Set up JDK
+                uses: actions/setup-java@v3
+                with:
+                    distribution: 'temurin'
+                    java-version: '21'
+                    cache: gradle
+            -   name: Grant execute permission for gradlew
+                run: chmod +x gradlew
+            -   name: Ktlint Check with Gradle
+                run: ./gradlew clean ktlintCheck
