Add Maven Central publishing support with signing, update publishing configuration, and document release process.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,31 @@
-#Tue Jun 24 16:17:49 EEST 2025
+# Project Information
+version=1.1.0
+group=io.github.imonja
+
+# Kotlin Configuration
 kotlin.code.style=official
-version=1.1.0-SNAPSHOT
+kotlin.jvm.target.validation.mode=warning
+
+# Maven Central Publishing
+# Set these in your environment or ~/.gradle/gradle.properties
+# mavenCentralUsername=your-sonatype-username
+# mavenCentralPassword=your-sonatype-password
+
+# GPG signing configuration
+# signing.keyId=your-gpg-key-id
+# signing.password=your-gpg-password
+# signing.secretKeyRingFile=path/to/your/secret/keyring
+
+# For in-memory signing (recommended for CI/CD)
+# signingKey=your-base64-encoded-private-key
+# signingPassword=your-gpg-password
+
+# GitHub Packages (existing)
+# github.name=your-github-username
+# github.token=your-github-token
+
+# Build Configuration
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx2g -XX:+UseParallelGC
