--- a/.github/workflows/ktlint-check.yml
+++ b/.github/workflows/ktlint-check.yml
@@ -11,19 +11,7 @@ on:
 
 jobs:
     ktlint-check:
-        runs-on: ubuntu-latest
-
-        steps:
-            -   uses: actions/checkout@v3
-                with:
-                    fetch-depth: 0
-            -   name: Set up JDK
-                uses: actions/setup-java@v3
-                with:
-                    distribution: 'temurin'
-                    java-version: '21'
-                    cache: gradle
-            -   name: Grant execute permission for gradlew
-                run: chmod +x gradlew
-            -   name: Ktlint Check with Gradle
-                run: ./gradlew clean ktlintCheck
+        uses: ./.github/workflows/ci-base.yml
+        with:
+            run-ktlint: true
+            run-tests: false
