--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,28 +11,7 @@ on:
 
 jobs:
     test:
-        runs-on: ubuntu-latest
-
-        steps:
-            -   uses: actions/checkout@v3
-                with:
-                    fetch-depth: 0
-            -   name: Set up JDK
-                uses: actions/setup-java@v3
-                with:
-                    distribution: 'temurin'
-                    java-version: '21'
-                    cache: gradle
-            -   name: Grant execute permission for gradlew
-                run: chmod +x gradlew
-            -   name: Run tests
-                id: tests
-                run: ./gradlew test
-            -   name: Report Test Results
-                if: ${{ always() && !cancelled() && steps.tests.outcome != 'skipped' }}
-                uses: dorny/test-reporter@v2
-                with:
-                    name: JUnit Tests
-                    path: '**/build/test-results/test/TEST-*.xml'
-                    reporter: java-junit
-                    fail-on-error: false
+        uses: ./.github/workflows/ci-base.yml
+        with:
+            run-ktlint: false
+            run-tests: true
