Consolidate and refactor workflows by replacing `ci-base`, `ktlint-check`, and `tests` with a single reusable `ci-checks` workflow for improved maintainability.

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -1,6 +1,8 @@
-name: CI Base
+name: CI Checks
 
 on:
+    pull_request:
+    workflow_dispatch:
     workflow_call:
         inputs:
             run-ktlint:
