Disable Gradle build caching in `gradle.properties` to adjust build configuration.

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,6 @@ kotlin.jvm.target.validation.mode=warning
 
 # Build Configuration
 org.gradle.parallel=true
-org.gradle.caching=true
+org.gradle.caching=false
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx2g -XX:+UseParallelGC
