--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -35,12 +35,12 @@ jobs:
 
             -   name: Run ktlint check
                 if: ${{ inputs.run-ktlint }}
-                run: ./gradlew clean ktlintCheck
+                run: ./gradlew clean ktlintCheck --no-build-cache
 
             -   name: Run tests
                 if: ${{ inputs.run-tests }}
                 id: tests
-                run: ./gradlew test
+                run: ./gradlew test --no-build-cache
 
             -   name: Report Test Results
                 if: ${{ always() && !cancelled() && steps.tests.outcome != 'skipped' && inputs.run-tests }}
