--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 # Project Information
-version=1.1.0
-group=io.github.imonja
+version=1.1.0-SNAPSHOT
 
 # Kotlin Configuration
 kotlin.code.style=official
