Clean up `publish-release.yml` by removing unused Maven Central credentials, refining signing configurations, and updating `gradle.properties` to align with Gradle CI/CD in-memory signing conventions.

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,9 @@ kotlin.jvm.target.validation.mode=warning
 # signing.secretKeyRingFile=path/to/your/secret/keyring
 
 # For in-memory signing (recommended for CI/CD)
-# signingKey=your-base64-encoded-private-key
-# signingPassword=your-gpg-password
+# Use: gpg --export-secret-keys KEY_ID | base64 -w 0
+# signingInMemoryKey=your-base64-encoded-private-key
+# signingInMemoryKeyPassword=your-gpg-password
 
 # GitHub Packages (existing)
 # github.name=your-github-username
