--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -50,21 +50,13 @@ jobs:
                       echo "Using manually provided version: ${{ github.event.inputs.version }}"
                       echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
                     fi
-            -   name: Debug signing key
-                run: |
-                    echo "Signing key length: ${#SIGNING_KEY}"
-                    echo "Signing key first 50 chars: ${SIGNING_KEY:0:50}"
-                    echo "Signing password length: ${#SIGNING_PASSWORD}"
-                env:
-                    SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-                    SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
             -   name: Publish to GitHub Packages
-                run: ./gradlew publishAllPublicationsToGitHubRepository -PreleaseVersion=$VERSION --info
+                run: ./gradlew publishAllPublicationsToGitHubRepository -PreleaseVersion=$VERSION
                 env:
                     GITHUB_USERNAME: ${{ github.actor }}
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
-                    ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
+                    ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+                    ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
     
     publish-maven:
         needs: ci-checks
@@ -95,7 +87,9 @@ jobs:
                       echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
                     fi
             -   name: Publish to Maven Central
-                run: ./gradlew publishToMavenCentral -PreleaseVersion=$VERSION -PsigningKey="${{ secrets.SIGNING_KEY }}" -PsigningPassword="${{ secrets.SIGNING_PASSWORD }}"
+                run: ./gradlew publishToMavenCentral -PreleaseVersion=$VERSION
                 env:
-                    MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-                    MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+                    ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+                    ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+                    ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+                    ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
