--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,8 +21,8 @@ jobs:
         with:
             run-ktlint: true
             run-tests: true
-    
-    publish-github:
+
+    publish-release:
         needs: ci-checks
         runs-on: ubuntu-latest
         steps:
@@ -50,15 +50,17 @@ jobs:
                       echo "Using manually provided version: ${{ github.event.inputs.version }}"
                       echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
                     fi
-            -   name: Publish to GitHub Packages
-                run: ./gradlew publishAllPublicationsToGitHubRepository -PreleaseVersion=$VERSION
+            -   name: Publish to GitHub Packages and Maven Central
+                run: ./gradlew publish -PreleaseVersion=$VERSION
                 env:
                     GITHUB_USERNAME: ${{ github.actor }}
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
                     ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
-    
-    publish-maven:
+                    ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+                    ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+
+    publish-release-plugin:
         needs: ci-checks
         runs-on: ubuntu-latest
         steps:
@@ -86,10 +88,19 @@ jobs:
                       echo "Using manually provided version: ${{ github.event.inputs.version }}"
                       echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
                     fi
-            -   name: Publish to Maven Central
-                run: ./gradlew publishToMavenCentral -PreleaseVersion=$VERSION
+            -   name: Publish plugin to GitHub Packages
+                run: ./gradlew :gradle-plugin:publish -PreleaseVersion=$VERSION
                 env:
+                    GITHUB_USERNAME: ${{ github.actor }}
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
                     ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
                     ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
                     ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+            -   name: Publish plugin to Gradle Plugin Portal
+                run: ./gradlew :gradle-plugin:publishPlugins -PreleaseVersion=$VERSION
+                env:
+                    ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+                    ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+                    GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
+                    GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
