--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -16,7 +16,7 @@ jobs:
         with:
             run-ktlint: true
             run-tests: true
-    
+
     publish-snapshot:
         needs: ci-checks
         runs-on: ubuntu-latest
@@ -33,7 +33,35 @@ jobs:
             -   name: Grant execute permission for gradlew
                 run: chmod +x gradlew
             -   name: Publish to GitHub Packages
-                run: ./gradlew publishAllPublicationsToGitHubRepository
+                run: ./gradlew publish
+                env:
+                    GITHUB_USERNAME: ${{ github.actor }}
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    publish-plugin-snapshot:
+        needs: ci-checks
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3
+                with:
+                    fetch-depth: 0
+            -   name: Set up JDK
+                uses: actions/setup-java@v3
+                with:
+                    distribution: 'temurin'
+                    java-version: '21'
+                    cache: gradle
+            -   name: Grant execute permission for gradlew
+                run: chmod +x gradlew
+            -   name: Generate snapshot version
+                run: |
+                    COMMIT_SHA=$(git rev-parse --short HEAD)
+                    TIMESTAMP=$(date +%Y%m%d.%H%M%S)
+                    SNAPSHOT_VERSION="$TIMESTAMP-$COMMIT_SHA-SNAPSHOT"
+                    echo "SNAPSHOT_VERSION=$SNAPSHOT_VERSION" >> $GITHUB_ENV
+                    echo "Publishing plugin snapshot version: $SNAPSHOT_VERSION"
+            -   name: Publish plugin to GitHub Packages
+                run: ./gradlew :gradle-plugin:publish -PreleaseVersion=$SNAPSHOT_VERSION
                 env:
                     GITHUB_USERNAME: ${{ github.actor }}
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
