Skip checks during publishing steps in GitHub Actions to improve workflow efficiency.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,7 +61,7 @@ jobs:
 
             -   name: Publish Libraries
                 if: ${{ steps.version.outputs.is_tag == 'true' || steps.tag.outputs.version_type != 'none' }}
-                run: ./gradlew -PreleaseVersion=${{ steps.version.outputs.version }} publish
+                run: ./gradlew -PreleaseVersion=${{ steps.version.outputs.version }} publish -x check
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     GITHUB_USERNAME: ${{ github.actor }}
@@ -72,7 +72,7 @@ jobs:
 
             -   name: Publish Gradle Plugin to GitHub Packages and Maven Central
                 if: ${{ steps.version.outputs.is_tag == 'true' || steps.tag.outputs.version_type != 'none' }}
-                run: ./gradlew :gradle-plugin:publish -PreleaseVersion=${{ steps.version.outputs.version }}
+                run: ./gradlew :gradle-plugin:publish -PreleaseVersion=${{ steps.version.outputs.version }} -x check
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     GITHUB_USERNAME: ${{ github.actor }}
@@ -83,7 +83,7 @@ jobs:
 
             -   name: Publish Gradle Plugin to Gradle Plugin Portal
                 if: ${{ (steps.version.outputs.is_tag == 'true' || steps.tag.outputs.version_type != 'none') && !contains(steps.version.outputs.version, 'SNAPSHOT') }}
-                run: ./gradlew :gradle-plugin:publishPlugins -PreleaseVersion=${{ steps.version.outputs.version }}
+                run: ./gradlew :gradle-plugin:publishPlugins -PreleaseVersion=${{ steps.version.outputs.version }} -x check
                 env:
                     ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
                     ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
